Fixed password visibility toggle height when form invalid

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -84,6 +84,9 @@ a {
 .text-dropdown-item {
     padding: var(--bs-dropdown-item-padding-y) var(--bs-dropdown-item-padding-x);
 }
+.btn-input-height {
+    height: calc(3.5rem + calc(var(--bs-border-width) * 2))
+}
 
 @media (max-width: 544px) {
     .content-container {
